feat: make supervisors explicit references